--- a/f99ae090-fffb-4327-8128-90b09c609789/lma/site-values.yaml
+++ b/f99ae090-fffb-4327-8128-90b09c609789/lma/site-values.yaml
@@ -2,7 +2,6 @@ apiVersion: openinfradev.github.com/v1
 kind: HelmValuesTransformer
 metadata:
   name: site
-
 global:
   nodeSelector:
     taco-lma: enabled
@@ -14,19 +13,15 @@ global:
   defaultUser: taco
   thanosObjstoreSecret: taco-objstore-secret
   thanosPrimaryCluster: false
-  # servicemesh dashboard and grafana
   realms: 04a70f29
   serviceDomain: taco-cat.xyz
   keycloakDomain: keycloak-eom.taco-cat.xyz
   grafanaClientSecret: JLtsanYtrCg21RGxrcVmQP0GeuDFUhpA
-
 charts:
 - name: prometheus-operator
   override:
     prometheusOperator.nodeSelector: $(nodeSelector)
-
 - name: eck-operator
-
 - name: prometheus
   override:
     prometheus.prometheusSpec.storageSpec.volumeClaimTemplate.spec.storageClassName: $(storageClassName)
@@ -34,37 +29,30 @@ charts:
     prometheus.prometheusSpec.retention: 2d
     prometheus.prometheusSpec.externalLabels.taco_cluster: $(clusterName)
     prometheus.prometheusSpec.nodeSelector: $(nodeSelector)
-    
     alertmanager.service.type: NodePort
     alertmanager.service.nodePort: 30111
     alertmanager.alertmanagerSpec.alertmanagerConfigSelector.matchLabels.alertmanagerConfig: example
     alertmanager.alertmanagerSpec.nodeSelector: $(nodeSelector)
     alertmanager.alertmanagerSpec.retention: 2h
     alertmanager.config.global.slack_api_url: https://hooks.slack.com/services/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
-
-- name: prometheus-node-exporter  
+- name: prometheus-node-exporter
   override:
     hostNetwork: false
-
 - name: kube-state-metrics
   override:
     nodeSelector: $(nodeSelector)
-
 - name: prometheus-pushgateway
   override:
     nodeSelector: $(nodeSelector)
-
 - name: prometheus-process-exporter
   override:
     conf.processes: dockerd,kubelet,kube-proxy,ntpd,node
     pod.hostNetwork: false
-
 - name: eck-resource
   override:
     kibana.nodeSelector: $(nodeSelector)
     kibana.server.basePath: /kibana
     kibana.readinessPath: /kibana/login
-    
     elasticsearch.nodeSets.master.nodeSelector: $(nodeSelector)
     elasticsearch.nodeSets.master.count: 1
     elasticsearch.nodeSets.master.javaOpts: "-Xms1g -Xmx1g"
@@ -72,7 +60,6 @@ charts:
     elasticsearch.nodeSets.master.limitMem: 4Gi
     elasticsearch.nodeSets.master.pvc.storageClassName: $(storageClassName)
     elasticsearch.nodeSets.master.pvc.size: 1Gi
-
     elasticsearch.nodeSets.hotdata.nodeSelector: $(nodeSelector)
     elasticsearch.nodeSets.hotdata.count: 1
     elasticsearch.nodeSets.hotdata.javaOpts: "-Xms1g -Xmx1g"
@@ -80,16 +67,12 @@ charts:
     elasticsearch.nodeSets.hotdata.limitMem: 2Gi
     elasticsearch.nodeSets.hotdata.pvc.storageClassName: $(storageClassName)
     elasticsearch.nodeSets.hotdata.pvc.size: 10Gi
-
     elasticsearch.nodeSets.client.enabled: false
-
-
 - name: grafana
   override:
     adminPassword: password
     persistence.storageClassName: $(storageClassName)
     sidecar.dashboards.searchNamespace: ALL
-    # grafana oidc
     service.type: ClusterIP
     grafana.ini.server:
       domain: dashboard-$(realms).$(serviceDomain)
@@ -116,13 +99,11 @@ charts:
     grafana.ini.user:
       auto_assign_org: true
       auto_assign_org_role: Admin
-
 - name: fluentbit-operator
   override:
     global.base_cluster_url: $(clusterName)
     fluentbitOperator.nodeSelector: $(nodeSelector)
     logExporter.nodeSelector: $(nodeSelector)
-
 - name: fluentbit
   override:
     global.base_cluster_url: $(clusterName)
@@ -133,27 +114,26 @@ charts:
       enabled: false
     fluentbit.nodeSelector: $(nodeSelector)
     fluentbit.targetLogs:
-       - bufferChunkSize: 2M
-         bufferMaxSize: 5M
-         do_not_store_as_default: true
-         index: container
-         memBufLimit: 20MB
-         multi_index:
-         - index: platform
-           key: $kubernetes['namespace_name']
-           value: kube-system|lma|fed|argo|openstack|istio-system|istio-services|trident|registry
-         name: dockerlog
-         parser: docker
-         path: /var/log/containers/*.log
-         tag: kube.*
-         type: fluent
-       - index: syslog
-         name: syslog
-         parser: syslog-rfc5424
-         path: /var/log/syslog
-         tag: syslog.*
-         type: syslog
-
+    - bufferChunkSize: 2M
+      bufferMaxSize: 5M
+      do_not_store_as_default: true
+      index: container
+      memBufLimit: 20MB
+      multi_index:
+      - index: platform
+        key: $kubernetes['namespace_name']
+        value: kube-system|lma|fed|argo|openstack|istio-system|istio-services|trident|registry
+      name: dockerlog
+      parser: docker
+      path: /var/log/containers/*.log
+      tag: kube.*
+      type: fluent
+    - index: syslog
+      name: syslog
+      parser: syslog-rfc5424
+      path: /var/log/syslog
+      tag: syslog.*
+      type: syslog
 - name: addons
   override:
     SPECIAL_VALUE: SPECIAL
@@ -170,11 +150,9 @@ charts:
     serviceMonitor.jaeger.enabled: false
     prometheusRules.istio.aggregation.enabled: false
     prometheusRules.istio.optimization.enabled: false
-
 - name: prometheus-adapter
   override:
     nodeSelector: $(nodeSelector)
-
 - name: kubernetes-event-exporter
   override:
     conf.default.hosts:
@@ -191,15 +169,13 @@ charts:
     queryFrontend.service.http.nodePort: 30007
     querier.stores:
     - prometheus-operated.lma.svc.$(clusterName):10901
+    - a7e30eedd0cff4e4e8000a9fffb6ac2b-2086693367.ap-northeast-2.elb.amazonaws.com:10901
     bucketweb.enabled: $(thanosPrimaryCluster)
     bucketweb.nodeSelector: $(nodeSelector)
     compactor.enabled: $(thanosPrimaryCluster)
     compactor.nodeSelector: $(nodeSelector)
     storegateway.nodeSelector: $(nodeSelector)
     compactor.persistence.size: 8Gi
-    # compactor.extraFlags:
-    # - --compact.enable-vertical-compaction
-    # - --deduplication.replica-label="replica"
     storegateway.persistence.size: 8Gi
     ruler.enabled: $(thanosPrimaryCluster)
     ruler.nodeSelector: $(nodeSelector)
@@ -212,7 +188,6 @@ charts:
     minio.persistence.storageClass: $(storageClassName)
     minio.persistence.accessMode: ReadWriteOnce
     minio.persistence.size: 10Gi
-
 - name: thanos-config
   override:
     objectStorage:
@@ -223,13 +198,13 @@ charts:
       secretName: $(thanosObjstoreSecret)
     sidecarsService.name: thanos-sidecars
     sidecarsService.endpoints:
-      - 192.168.97.102 # should not be in the loopback range (127.0.0.0/8)
+    - 192.168.97.102   # should not be in the loopback range (127.0.0.0/8)
 
 - name: prepare-etcd-secret
   override:
     nodeSelector:
       "node-role.kubernetes.io/master": ""
     tolerations:
-      - key: "node-role.kubernetes.io/master"
-        effect: "NoSchedule"
-        operator: "Exists"
+    - key: "node-role.kubernetes.io/master"
+      effect: "NoSchedule"
+      operator: "Exists"
